# margraphita

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  adj_common.h  adj_list.cpp  adj_list.h  common.mk  config.json  docker-compose.yml  wiredtiger.cmake
benchmark/: CMakeLists.txt  adj_ekey_microbenchmark.cpp  bc.cpp  bc_parallel.cpp  benchmark_definitions.h  bfs.cpp  bfs_do.cpp  bfs_ec.cpp  bfs_parallel.cpp  bfs_parallel_ec.cpp  bulk_insert.cpp  bulk_insert.h  cc.cpp  cc_parallel.cpp  cc_parallel_ec.cpp  dense_vertexranges.cpp  generate_nodes.sh  hashing_microbenchmark.cpp  insert_kron.sh  insertion_deletion.cpp  insertion_microbenchmark.cpp  iteration_ec.cpp  iteration_vc.cpp  kron_gen.sh  microbenchmark.cpp  microbenchmarks.cpp  neo4j.py  pack_test.cpp  pagerank.cpp  pagerank_ec.cpp  pagerank_iter.cpp  pagerank_iter_map.cpp  pagerank_mt.cpp  pagerank_vc.cpp  paths.sh  pr_iter_getout.cpp  pr_iter_parallel.cpp  preprocess.sh  pvector.h  reader.cpp  (+13 more)
benchmark/microbenchmarks/: CMakeLists.txt  adjlist_iter_seek_scan.cpp  adjlist_seek_scan.cpp  csr_seek_scan.cpp  ekey_seek_scan.cpp  run_ubenchmark.py  std_seek_scan.cpp
libs/wiredtiger/: wiredtiger.cmake
outputs/: LazyPLots.xlsx  adj_rd_cit-Patents_bfs.csv  adj_rd_cit-Patents_pr.csv  adj_rd_cit-Patents_tc.csv  adj_rd_s10_e8_bfs.csv  adj_rd_s10_e8_pr.csv  adj_rd_s11_e8_bfs.csv  adj_rd_s11_e8_pr.csv  adj_rd_s12_e8_bfs.csv  adj_rd_s12_e8_pr.csv  adj_rd_s13_e8_bfs.csv  adj_rd_s13_e8_pr.csv  adj_rd_s13_e8_tc.csv  adj_rd_s14_e8_bfs.csv  adj_rd_s14_e8_pr.csv  adj_rd_s15_e8_bfs.csv  adj_rd_s15_e8_pr.csv  adj_rd_s15_e8_tc.csv  adj_rd_s16_e8_bfs.csv  adj_rd_s16_e8_pr.csv  adj_rd_s17_e8_bfs.csv  adj_rd_s17_e8_pr.csv  adj_rd_s17_e8_tc.csv  adj_rd_s18_e8_bfs.csv  adj_rd_s18_e8_pr.csv  adj_rd_s19_e8_bfs.csv  adj_rd_s19_e8_pr.csv  adj_rd_s20_e8_bfs.csv  adj_rd_s20_e8_pr.csv  adj_rd_s21_e8_pr.csv  adj_rd_s22_e8_pr.csv  adj_rd_s23_e8_pr.csv  bfs_test.txt  disk_rw_speeds.csv  ekey_rd_cit-Patents_bfs.csv  ekey_rd_cit-Patents_pr.csv  ekey_rd_cit-Patents_tc.csv  ekey_rd_s10_e8_bfs.csv  ekey_rd_s10_e8_pr.csv  ekey_rd_s10_e8_tc.csv  (+65 more)
outputs/benchmarks/: adj_kron_insert_times.csv  adj_rd_cit-Patents_bfs.csv  adj_rd_cit-Patents_pr.csv  adj_rd_s10_e8_bfs.csv  adj_rd_s10_e8_pr.csv  adj_rd_s10_e8_tc.csv  adj_rd_s11_e8_bfs.csv  adj_rd_s11_e8_pr.csv  adj_rd_s11_e8_tc.csv  adj_rd_s12_e8_bfs.csv  adj_rd_s12_e8_pr.csv  adj_rd_s12_e8_tc.csv  adj_rd_s13_e8_pr.csv  adj_rd_s14_e8_pr.csv  adj_rd_s14_e8_tc.csv  adj_rd_s15_e8_bfs.csv  adj_rd_s15_e8_pr.csv  adj_rd_s16_e8_bfs.csv  adj_rd_s16_e8_pr.csv  adj_rd_s16_e8_tc.csv  adj_rd_s17_e8_bfs.csv  adj_rd_s17_e8_pr.csv  adj_rd_s18_e8_pr.csv  adj_rd_s19_e8_pr.csv  adj_rd_s20_e8_pr.csv  adj_rd_s21_e8_pr.csv  adj_rd_s22_e8_pr.csv  adj_rd_s23_e8_pr.csv  adj_rd_s24_e8_pr copy.csv  adj_rd_s24_e8_pr.csv  backup_ekey_rd_cit-Patents_bfs.csv  ekey_kron_insert_times.csv  ekey_rd_cit-Patents_bfs.csv  ekey_rd_cit-Patents_pr.csv  ekey_rd_s10_e8_pr.csv  ekey_rd_s10_e8_tc.csv  ekey_rd_s11_e8_pr.csv  ekey_rd_s11_e8_tc.csv  ekey_rd_s12_e8_pr.csv  ekey_rd_s12_e8_tc.csv  (+39 more)
outputs/bfs/: adj_rd_.txt  adj_rd_cit-Patents.txt  adj_rd_s10_e8.txt  adj_rd_s11_e8.txt  adj_rd_s12_e8.txt  adj_rd_s13_e8.txt  adj_rd_s14_e8.txt  adj_rd_s15_e8.txt  adj_rd_s16_e8.txt  adj_rd_s17_e8.txt  adj_rd_s18_e8.txt  adj_rd_s19_e8.txt  adj_rd_twitter.txt  cit-Patents.txt  ekey_rd_cit-Patents.txt  ekey_rd_s10_e8.txt  ekey_rd_s11_e8.txt  ekey_rd_s12_e8.txt  ekey_rd_s13_e8.txt  ekey_rd_s14_e8.txt  ekey_rd_s15_e8.txt  ekey_rd_s16_e8.txt  ekey_rd_s17_e8.txt  ekey_rd_s18_e8.txt  ekey_rd_s19_e8.txt  ekey_rd_s20_e8.txt  s10_e8.txt  s11_e8.txt  s12_e8.txt  s13_e8.txt  s14_e8.txt  s15_e8.txt  s16_e8.txt  s17_e8.txt  s18_e8.txt  s19_e8.txt  s20_e8.txt  std_rd_cit-Patents.txt  std_rd_s10_e8.txt  std_rd_s11_e8.txt  (+6 more)
outputs/chi_stats/: cit-Patents-grapchi-pr.csv  cit-Patents-graphchi-tc.csv  s10_e8-grapchi-pr.csv  s10_e8-graphchi-tc.csv  s11_e8-grapchi-pr.csv  s11_e8-graphchi-tc.csv  s12_e8-grapchi-pr.csv  (+17 more)
preprocess/: CMakeLists.txt  bulk_insert.cpp  bulk_insert.h  bulk_insert_low_mem.cpp  bulk_insert_low_mem.h  config.json  dense_vertexranges.cpp  dense_vertexranges_set.cpp  dump_graph.cpp  graph_datasets.json  init_db.cpp  insert_kron.py  insert_kron.sh  kron_gen.py  mk_adjlists.cpp  mk_adjlists.h  mt_graphapi_insert.cpp  mt_graphapi_insert_notx.cpp  paths.py  preprocess.py  preprocess.sh  reader.cpp  reader.h  single_threaded_graphapi_insert.cpp  test_tbbb.cpp  time_structs.h  transaction_check.sh  transaction_insert.py  wt_thread.cpp
preprocess/scripts/: check_sequential_nodeids.py  count.awk  nodes.awk  test_sort.awk
src/: CMakeLists.txt  GraphCreate.h  Makefile  adj_common.h  adj_list.cpp  adj_list.h  common.cpp  common.h  common_defs.h  common_util.cpp  common_util.h  edgekey.cpp  edgekey.h  edgekey_split.cpp  edgekey_split.h  edgelist.cpp  edgelist.h  graph.cpp  graph.h  graph_engine.cpp  graph_engine.h  graph_exception.h  graph_main.cpp  graphengine.cpp  graphengine.h  impl_notes.md  iterator.h  lock.cpp  lock.h  sample_graph.h  standard_graph.cpp  standard_graph.h  test_standard_graph.cpp  test_standard_graph.h  timeline.md  unordered_edgelist.cpp  unordered_edgelist.h
test/: CMakeLists.txt  Makefile  _sample_graph.h  array_test.cpp  atomic_test.cpp  cursor_test.cpp  gtest_common.cpp  gtest_insertion_mb.cpp  gtest_standard_graph.cpp  pvector_test.cpp  sample_graph.h  test.cpp  test_adj_list.cpp  test_adj_list.h  test_bulk_load.cpp  test_common.cpp  test_concurrency.cpp  test_edgekey.cpp  test_edgekey.h  test_graph_engine.h  test_interface.cpp  test_interface.h  test_multithread.cpp  test_packing.cpp  test_partition.cpp  test_size.cpp  test_split_edgekey.cpp  test_standard_graph.cpp  test_standard_graph.h  test_str_pack.cpp  test_string_fmt.cpp  test_uoedgelist.cpp  test_uoedgelist.h
utils/: CMakeLists.txt  bins.h  bitmap.h  command_line.h  concurrentqueue.h  csv_log.h  logger.h  mem_usage.h  mmap_helper.h  platform_atomics.h  pvector.h  reader.h  sliding_queue.h  source_picker.h  thread_utils.h  times.h
(+107 files in other folders)
